# gpu-npu-util-reporter

./: .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  PRD.md  README.md
.github/workflows/: build.yml
docs/superpowers/plans/: 2026-06-19-gpu-npu-utilization-monitor.md
docs/superpowers/specs/: 2026-06-19-gpu-npu-utilization-monitor-design.md  2026-06-26-host-metrics-in-device-spec-design.md
src/: config.rs  db.rs  devices.rs  error.rs  fetcher.rs  highlight.rs  lib.rs  logging.rs  main.rs  mapper.rs  pipeline.rs  processor.rs  reporter.rs  template.rs  time_expr.rs
tests/: e2e_render.rs
