[package]
name = "gpu-util-monitor"
version = "0.1.0"
edition = "2021"

[lib]
name = "gpu_util_monitor"
path = "src/lib.rs"

[[bin]]
name = "gpu-util-monitor"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
csv = "1"
calamine = "0.26"
rust_xlsxwriter = "0.79"
futures = "0.3"
async-trait = "0.1"
