[package]
name = "gpu-npu-util-reporter"
version = "1.2.4"
edition = "2021"
description = "从多个 Prometheus 数据源提取 GPU/NPU 计算卡利用率与显存占用，聚合后生成带阈值染色的 Excel 报表。"
license = "MIT"
repository = "https://github.com/TrustAsia/gpu-npu-util-reporter"
keywords = ["prometheus", "gpu", "npu", "utilization", "xlsx"]
categories = ["command-line-utilities", "visualization"]

[lib]
name = "gpu_npu_util_reporter"
path = "src/lib.rs"

[[bin]]
name = "gpu-npu-util-reporter"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"  # deprecated; migrate to serde_yaml_neo when API stabilizes
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
csv = "1"
calamine = "0.26"
rust_xlsxwriter = "0.79"
async-trait = "0.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-appender = "0.2.5"
